--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+body {
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 /* ===== TOP BAR ===== */
 .top-bar {
   background: linear-gradient(135deg, #1e5631 0%, #2d7a3e 100%);
@@ -21,7 +27,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  padding: 10px 24px;
+  padding: 12px 20px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
@@ -65,6 +71,7 @@
   border-bottom: 4px solid #2d7a3e;
   padding: 15px 24px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  position: relative;
 }
 
 .header-container {
@@ -128,13 +135,73 @@
   color: #1e5631;
 }
 
+.menu ul li.mobile-only {
+  display: none;
+}
+
 .menu-toggle {
   display: none;
-  font-size: 24px;
   background: none;
   border: none;
-  color: #1e5631;
   cursor: pointer;
+  padding: 8px;
+  z-index: 100000;
+  position: relative;
+  width: 44px;
+  height: 44px;
+  align-items: center;
+  justify-content: center;
+}
+
+.hamburger {
+  width: 28px;
+  height: 24px;
+  position: relative;
+  transform: rotate(0deg);
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.hamburger span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: #1e5631;
+  border-radius: 3px;
+  opacity: 1;
+  left: 0;
+  transform: rotate(0deg);
+  transition: 0.3s ease-in-out;
+}
+
+.hamburger span:nth-child(1) {
+  top: 0px;
+}
+
+.hamburger span:nth-child(2) {
+  top: 10px;
+}
+
+.hamburger span:nth-child(3) {
+  top: 20px;
+}
+
+.menu-toggle.active .hamburger span:nth-child(1) {
+  top: 10px;
+  transform: rotate(45deg);
+  background: #fff;
+}
+
+.menu-toggle.active .hamburger span:nth-child(2) {
+  opacity: 0;
+  transform: translateX(-20px);
+}
+
+.menu-toggle.active .hamburger span:nth-child(3) {
+  top: 10px;
+  transform: rotate(-45deg);
+  background: #fff;
 }
 
 
@@ -142,12 +209,13 @@
 .slider {
   position: relative;
   width: 100%;
-  height: 350px; /* Adjusted for mobile */
-  overflow: auto;
+  height: 280px; /* Reduced for mobile */
+  overflow: hidden;
   background: linear-gradient(135deg, #1e5631 0%, #2d7a3e 100%);
   display: flex;
   align-items: center;
   justify-content: center;
+  touch-action: pan-y;
 }
 
 .slides {
@@ -163,12 +231,11 @@
   position: absolute;
   max-width: 100%;
   max-height: 100%;
-  width: auto;
-  height: auto;
-  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   opacity: 0;
   transition: opacity 0.6s ease, transform 0.6s ease;
-  background: #f1f3f5;
 }
 
 .slides img.active {
@@ -180,16 +247,43 @@
   position:absolute;
   top:50%;
   transform:translateY(-50%);
-  background:rgba(0,0,0,0.4);
+  background:rgba(30, 86, 49, 0.7);
   color:#fff;
   border:none;
-  padding:10px;
-  font-size:18px;
+  padding:12px 16px;
+  font-size:20px;
   cursor:pointer;
   z-index: 10;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+  backdrop-filter: blur(4px);
+  min-width: 44px;
+  min-height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.slider button:hover {
+  background:rgba(30, 86, 49, 0.9);
+  transform: translateY(-50%) scale(1.1);
+}
+
+.slider button:active {
+  transform: translateY(-50%) scale(0.95);
+}
+
 .slider .prev{left:10px;}
 .slider .next{right:10px;}
+
+@media (max-width: 767px) {
+  .slider button {
+    padding: 10px 12px;
+    font-size: 16px;
+    min-width: 40px;
+    min-height: 40px;
+  }
+}
 
 
 /* ===== PAGE LOAD ANIMATIONS ===== */
@@ -331,6 +425,43 @@
 
 
 /* ===== RESPONSIVE STYLES ===== */
+
+/* Small mobile devices */
+@media (max-width: 375px) {
+  .college-info h1 {
+    font-size: 16px;
+  }
+
+  .logo-section img {
+    height: 50px;
+  }
+
+  .main-header {
+    padding: 14px 16px;
+  }
+
+  .logo-section {
+    gap: 10px;
+  }
+
+  .slider {
+    height: 220px;
+  }
+
+  .menu ul li {
+    padding: 14px 20px;
+    font-size: 14px;
+  }
+}
+
+/* Medium mobile devices */
+@media (min-width: 376px) and (max-width: 767px) {
+  .slider {
+    height: 260px;
+  }
+}
+
+/* Tablets and larger */
 @media (min-width: 768px) {
     .college-info h1 {
         font-size: 28px;
@@ -345,8 +476,20 @@
     .slider {
         height: 550px;
     }
+
+    .top-bar nav a {
+      font-size: 14px;
+    }
 }
 
+/* Large tablets */
+@media (min-width: 992px) and (max-width: 1023px) {
+  .slider {
+    height: 600px;
+  }
+}
+
+/* Desktop */
 @media (min-width: 1024px) {
     .slider {
         height: 650px;
@@ -833,59 +976,219 @@
 
 
 @media (max-width: 767px) {
-  .top-bar nav {
-    display: none; /* Hide top nav on small screens */
+  .top-bar {
+    display: none;
   }
 
   .menu-toggle {
-      display: block;
-      position: absolute;
-      top: 28px;
-      right: 20px;
+      display: flex;
+      position: relative;
+      top: auto;
+      right: auto;
+      transform: none;
+      flex-shrink: 0;
   }
 
   .menu {
       width: 100%;
       margin-left: 0;
+      position: static;
   }
 
+  /* Full-page menu overlay */
   .menu ul {
     display: none;
     flex-direction: column;
-    width: 100%;
-    background-color: #f9f9f9;
-    position: absolute;
-    top: 90px;
+    width: 100vw;
+    min-height: 100vh;
+    height: 100vh;
+    background: linear-gradient(135deg, #1e5631 0%, #2d7a3e 50%, #1e5631 100%);
+    position: fixed;
+    top: 0;
     left: 0;
-    z-index: 100;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    right: 0;
+    bottom: 0;
+    z-index: 99999;
+    padding: 80px 20px 40px 20px;
+    margin: 0;
+    animation: slideInMenu 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    overflow-y: auto;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+    justify-content: flex-start;
+    gap: 0;
+  }
+
+  @keyframes slideInMenu {
+    from {
+      opacity: 0;
+      transform: translateY(-100%);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
 
   .menu ul.active {
     display: flex;
   }
 
-  .menu ul li {
-    padding: 15px;
+  /* Menu header */
+  .menu ul::before {
+    content: "MENU";
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.7);
+    font-weight: 700;
+    letter-spacing: 3px;
     text-align: center;
-    border-bottom: 1px solid #eee;
   }
-  
-  .menu ul li::after {
-      content: "";
+
+  /* Modern menu items */
+  .menu ul li {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    border: none;
+    font-size: 18px;
+    color: #ffffff;
+    position: relative;
+    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    background: transparent;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    height: auto;
+    min-height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
+    margin-bottom: 8px;
+    opacity: 0;
+    animation: fadeInItem 0.4s ease forwards;
+  }
+
+  @keyframes fadeInItem {
+    from {
+      opacity: 0;
+      transform: translateX(-30px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  .menu ul li:nth-child(1) { animation-delay: 0.1s; }
+  .menu ul li:nth-child(2) { animation-delay: 0.15s; }
+  .menu ul li:nth-child(3) { animation-delay: 0.2s; }
+  .menu ul li:nth-child(4) { animation-delay: 0.25s; }
+  .menu ul li:nth-child(5) { animation-delay: 0.3s; }
+  .menu ul li:nth-child(6) { animation-delay: 0.35s; }
+  .menu ul li:nth-child(7) { animation-delay: 0.4s; }
+  .menu ul li:nth-child(8) { animation-delay: 0.45s; }
+  .menu ul li:nth-child(9) { animation-delay: 0.5s; }
+  .menu ul li:nth-child(10) { animation-delay: 0.55s; }
+  .menu ul li:nth-child(11) { animation-delay: 0.6s; }
+  .menu ul li:nth-child(12) { animation-delay: 0.65s; }
+  .menu ul li:nth-child(13) { animation-delay: 0.7s; }
+  .menu ul li:nth-child(14) { animation-delay: 0.75s; }
+  .menu ul li:nth-child(15) { animation-delay: 0.8s; }
+
+  .menu ul li:last-child {
+    margin-bottom: 0;
+  }
+
+  .menu ul li.mobile-only {
+    display: flex;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.9);
+    font-weight: 500;
+    margin-top: 0;
+  }
+
+  .menu ul li.mobile-only:first-of-type {
+    margin-top: 20px;
+    padding-top: 20px;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    position: relative;
+  }
+
+  .menu ul li.mobile-only:first-of-type::before {
+    content: "MORE";
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 10px;
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: 600;
+    letter-spacing: 2px;
+  }
+
+  .menu ul li:active {
+    background: rgba(255, 255, 255, 0.15);
+    transform: scale(0.98);
   }
   
   .header-container {
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding: 0;
+    max-width: 100%;
+  }
+
+  .main-header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background: #ffffff;
+    padding: 16px 20px;
+    box-shadow: 0 4px 12px rgba(30, 86, 49, 0.08);
+  }
+
+  /* Keep menu toggle above menu */
+  .main-header .menu-toggle {
+    z-index: 100000;
+  }
+
+  .logo-section {
+    gap: 12px;
+    align-items: center;
+    flex-grow: 0;
+    max-width: calc(100% - 60px);
+  }
+
+  .logo-section img {
+    height: 55px;
+    width: auto;
+    flex-shrink: 0;
+  }
+
+  .college-info {
+    flex: 1;
+    overflow: hidden;
   }
 
   .college-info h1 {
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 1.2;
+    text-align: left;
+    margin: 0;
+    color: #1e5631;
+    font-weight: 700;
+    letter-spacing: 0.3px;
   }
   
   .college-info p {
-      font-size: 11px;
+      font-size: 9px;
+      line-height: 1.4;
   }
 
   .logo-circle {
@@ -1102,10 +1405,15 @@
             <img src="logo.jpg" alt="ISL Pharmacy College Logo">
             <div class="college-info">
                 <h1>ISL PHARMACY COLLEGE</h1>
-                <p>Approved by PCI & AICTE | Affiliated to Osmania University | Approved By Telangana Govt</p>
             </div>
         </div>
-        <button class="menu-toggle">&#9776;</button>
+        <button class="menu-toggle" aria-label="Toggle menu">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </button>
         <nav class="menu">
             <ul>
                 <li>ABOUT US</li>
@@ -1113,6 +1421,16 @@
                 <li>FACILITIES</li>
                 <li>DEPARTMENTS</li>
                 <li>PLACEMENTS</li>
+                <li class="mobile-only">EXAMINATION</li>
+                <li class="mobile-only">STUDENT CORNER</li>
+                <li class="mobile-only">ONLINE GRIEVANCE</li>
+                <li class="mobile-only">R&D</li>
+                <li class="mobile-only">IQAC</li>
+                <li class="mobile-only">ALUMNI</li>
+                <li class="mobile-only">NIRF</li>
+                <li class="mobile-only">BLOG</li>
+                <li class="mobile-only">CAREERS</li>
+                <li class="mobile-only">CONTACT US</li>
             </ul>
         </nav>
     </div>
@@ -1209,9 +1527,37 @@
 window.addEventListener("DOMContentLoaded",()=>{
   const menuToggle = document.querySelector(".menu-toggle");
   const menuUl = document.querySelector(".menu ul");
+  const body = document.body;
 
   menuToggle.addEventListener("click", () => {
       menuUl.classList.toggle("active");
+      menuToggle.classList.toggle("active");
+      
+      // Prevent body scroll when menu is open
+      if (menuUl.classList.contains("active")) {
+        body.style.overflow = "hidden";
+      } else {
+        body.style.overflow = "";
+      }
+  });
+
+  // Close menu when clicking menu items
+  const menuItems = document.querySelectorAll(".menu ul li");
+  menuItems.forEach(item => {
+    item.addEventListener("click", () => {
+      menuUl.classList.remove("active");
+      menuToggle.classList.remove("active");
+      body.style.overflow = "";
+    });
+  });
+
+  // Close menu when clicking outside
+  document.addEventListener("click", (e) => {
+    if (!e.target.closest(".menu") && !e.target.closest(".menu-toggle")) {
+      menuUl.classList.remove("active");
+      menuToggle.classList.remove("active");
+      body.style.overflow = "";
+    }
   });
 });
 
