--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             <img src="logo.jpg" alt="ISL Pharmacy College Logo">
             <div class="college-info">
                 <h1>ISL PHARMACY COLLEGE</h1>
+                <p class="affiliation">Approved by PCI | Affiliated to OSMANIA UNIVERSITY | Approved by TELANGANA GOVT.</p>
             </div>
+            <img src="https://i.ibb.co/RkG7N47Q/9f7487e3-0132-45bb-b8f3-03ad2873e605-removalai-preview.png" alt="ISL Pharmacy Logo" class="header-logo-image">
+            <img src="https://i.ibb.co/zVxZzDhq/03c1a891-388b-4961-8722-de4ec40e4349-removalai-preview.png" alt="ISL Pharmacy Logo 2" class="header-logo-image">
         </div>
         <button class="menu-toggle" aria-label="Toggle menu">
             <div class="hamburger">
