--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <a href="#">Online Grievance</a>
     <a href="#">R&amp;D</a>
     <a href="#">IQAC</a>
-    <a href="#">Alumni</a>
+    <a href="#"></a>
     <a href="#">NIRF</a>
     <a href="#">Blog</a>
-    <a href="#">Careers</a>
+    <a href="almanac.html">ALMANAC</a>
     <a href="#">Contact Us</a>
   </nav>
 </div>
@@ -57,9 +57,9 @@
                 <li class="mobile-only">ONLINE GRIEVANCE</li>
                 <li class="mobile-only">R&D</li>
                 <li class="mobile-only">IQAC</li>
-                <li class="mobile-only">ALUMNI</li>
+                <li class="mobile-only"><a href="almanac.html">ALMANAC</a></li>
                 <li class="mobile-only">NIRF</li>
-                <li class="mobile-only">BLOG</li>
+                <li class="mobile-only">SYLLABUS</li>
                 <li class="mobile-only">CAREERS</li>
                 <li class="mobile-only">CONTACT US</li>
             </ul>
