--- a/almanac.html
+++ b/almanac.html
@@ -117,9 +117,9 @@
 <header class="main-header">
     <div class="header-container">
         <div class="logo-section">
-            <img src="logo.jpg" alt="ISL Pharmacy College Logo">
+            <a href="index.html"><img src="logo.jpg" alt="ISL Pharmacy College Logo"></a>
             <div class="college-info">
-                <h1>ISL PHARMACY COLLEGE</h1>
+                <a href="index.html" style="text-decoration: none; color: inherit;"><h1>ISL PHARMACY COLLEGE</h1></a>
                 <p class="affiliation">Approved by PCI | Affiliated to OSMANIA UNIVERSITY | Approved by TELANGANA GOVT.</p>
             </div>
             <img src="https://i.ibb.co/RkG7N47Q/9f7487e3-0132-45bb-b8f3-03ad2873e605-removalai-preview.png" alt="ISL Pharmacy Logo" class="header-logo-image">
