--- a/index.html
+++ b/index.html
@@ -85,6 +85,20 @@
   <button class="next">&#10095;</button>
 </div>
 
+<!-- PRESENTING SECTION -->
+<section class="presenting-section">
+  <div class="presenting-container">
+    <h2 class="presenting-title">PRESENTING ISL PHARMACY COLLEGE</h2>
+    <div class="presenting-content">
+      <p>ISL Pharmacy College stands as a distinguished institution dedicated to excellence in pharmaceutical education and research. With state-of-the-art infrastructure and experienced faculty, the college provides a comprehensive learning environment that nurtures both academic knowledge and practical skills.</p>
+      
+      <p>The institution offers undergraduate and postgraduate programs designed to meet the evolving demands of the pharmaceutical industry. Students are equipped with cutting-edge knowledge in pharmaceutical sciences, drug development, and healthcare management, preparing them for successful careers in diverse pharmaceutical sectors.</p>
+      
+      <p>Through a blend of theoretical instruction, laboratory practice, and industry exposure, ISL Pharmacy College fosters innovation, critical thinking, and professional ethics. The college is committed to developing competent pharmacists who contribute meaningfully to healthcare and society.</p>
+    </div>
+  </div>
+</section>
+
 <script src="isl.js"></script>
 
 </body>
