--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=1024">
 <title>ISL Pharmacy College - Bandlaguda, India</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -98,6 +98,38 @@
     </div>
   </div>
 </section>
+
+<!-- HONOURED SECTION -->
+<section class="honoured-section">
+  <div class="honoured-container">
+    <h2 class="honoured-title">HONOURABLE CHAIRMAN</h2>
+    <div class="honoured-content">
+      <div class="chairman-img-container">
+        <img src="chairman.jpeg" alt="Mr. Salman Ahmed" class="chairman-image">
+      </div>
+      <h3 class="chairman-name">MR. SALMAN AHMED</h3>
+      <div class="chairman-bio">
+        <p>With a visionary approach to education and a steadfast commitment to excellence, Mr. Salman Ahmed has been the driving force behind the illustrious journey of ISL Pharmacy College. His unyielding dedication to fostering an environment of academic rigor and moral integrity has positioned the institution as a beacon of learning in the field of pharmaceutical sciences.</p>
+        
+        <p>Believing that true education transcends the boundaries of the classroom, Mr. Ahmed advocates for a holistic development model that empowers students not only with technical expertise but also with the compassion and ethical grounding necessary for healthcare professionals. Under his stewardship, the college has expanded its horizons, embracing modern methodologies while staying rooted in traditional values.</p>
+        
+        <p>His guidance inspires the faculty to pursue groundbreaking research and encourages students to dream beyond the ordinary. Mr. Ahmed remains committed to the mission of shaping competent, innovative, and socially responsible pharmacists who will lead the future of global healthcare and serve society with distinction.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="footer-container">
+    <div class="footer-brand">ISL PHARMACY COLLEGE</div>
+    <div class="footer-contact">
+      <span class="footer-label">Email:</span>
+      <a class="footer-email" href="mailto:meetislpcollege@gmail.com">meetislpcollege@gmail.com</a>
+    </div>
+    <div class="footer-copy">© 2026 ISL Pharmacy College. All rights reserved.</div>
+  </div>
+</footer>
 
 <script src="isl.js"></script>
 
