--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="#">IQAC</a>
     <a href="#"></a>
     <a href="#">NIRF</a>
-    <a href="#">Blog</a>
+    <a href="syllabus.html">Syllabus</a>
     <a href="almanac.html">ALMANAC</a>
     <a href="#">Contact Us</a>
   </nav>
@@ -47,11 +47,12 @@
         </button>
         <nav class="menu">
             <ul>
-                <li>ABOUT US</li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
                 <li>ACADEMICS</li>
                 <li>FACILITIES</li>
                 <li>DEPARTMENTS</li>
                 <li>PLACEMENTS</li>
+            <li><a href="syllabus.html">SYLLABUS</a></li>
                 <li class="mobile-only">EXAMINATION</li>
                 <li class="mobile-only">STUDENT CORNER</li>
                 <li class="mobile-only">ONLINE GRIEVANCE</li>
@@ -59,7 +60,7 @@
                 <li class="mobile-only">IQAC</li>
                 <li class="mobile-only"><a href="almanac.html">ALMANAC</a></li>
                 <li class="mobile-only">NIRF</li>
-                <li class="mobile-only">SYLLABUS</li>
+                <li class="mobile-only"><a href="syllabus.html">SYLLABUS</a></li>
                 <li class="mobile-only">CAREERS</li>
                 <li class="mobile-only">CONTACT US</li>
             </ul>
@@ -115,6 +116,20 @@
         
         <p>His guidance inspires the faculty to pursue groundbreaking research and encourages students to dream beyond the ordinary. Mr. Ahmed remains committed to the mission of shaping competent, innovative, and socially responsible pharmacists who will lead the future of global healthcare and serve society with distinction.</p>
       </div>
+    </div>
+  </div>
+</section>
+
+<!-- PRINCIPAL MESSAGE -->
+<section class="principal-section">
+  <div class="principal-container">
+    <h2 class="principal-title">Principal Message</h2>
+    <div class="principal-card">
+      <p>It is a privilege to welcome you to ISL PHARMACY COLLEGE.</p>
+      <p>The field of pharmacy has transformed from traditional dispensing to a high-tech, patient-centered clinical practice. Our mission is to produce <span class="principal-highlight">&lsquo;Seven-Star Pharmacists&rsquo;</span> who excel as caregivers, decision-makers, and leaders in the global healthcare landscape.</p>
+      <p><span class="principal-quote">&ldquo;Welcome to our vibrant academic community. At ISL PHARMACY COLLEGE, we believe that education extends beyond the classroom. Our focus is on the holistic development of our students—blending rigorous academic standards with personal integrity and social responsibility.
+      Our dedicated faculty members act as mentors, guiding you through the complexities of pharmaceutical sciences and preparing you for diverse career paths in clinical research, hospital pharmacy, and the pharmaceutical industry. We look forward to helping you realize your potential as a future healthcare professional.&rdquo;</span></p>
+      <p>Through our state-of-the-art laboratories and industry partnerships, we provide an environment where innovation thrives. We don&rsquo;t just teach the science of medicine; we instill the ethics of care. Whether you are a prospective student or a healthcare partner, I invite you to join us in shaping a healthier tomorrow.</p>
     </div>
   </div>
 </section>
