--- a/menu-test.html
+++ b/menu-test.html
@@ -118,7 +118,7 @@ body {
 
 <nav class="menu">
     <ul>
-        <li>ABOUT US</li>
+        <li><a href="aboutus.html">ABOUT US</a></li>
         <li>ACADEMICS</li>
         <li>FACILITIES</li>
         <li>DEPARTMENTS</li>
