--- a/almanac.html
+++ b/almanac.html
@@ -122,8 +122,8 @@
                 <a href="index.html" style="text-decoration: none; color: inherit;"><h1>ISL PHARMACY COLLEGE</h1></a>
                 <p class="affiliation">Approved by PCI | Affiliated to OSMANIA UNIVERSITY | Approved by TELANGANA GOVT.</p>
             </div>
-            <img src="https://i.ibb.co/RkG7N47Q/9f7487e3-0132-45bb-b8f3-03ad2873e605-removalai-preview.png" alt="ISL Pharmacy Logo" class="header-logo-image">
-            <img src="https://i.ibb.co/zVxZzDhq/03c1a891-388b-4961-8722-de4ec40e4349-removalai-preview.png" alt="ISL Pharmacy Logo 2" class="header-logo-image">
+            <img src="assets/logos/header-logo-1.png" alt="ISL Pharmacy Logo" class="header-logo-image">
+            <img src="assets/logos/header-logo-2.png" alt="ISL Pharmacy Logo 2" class="header-logo-image">
         </div>
         <button class="menu-toggle" aria-label="Toggle menu">
             <div class="hamburger">
