--- a/index.html
+++ b/index.html
@@ -125,11 +125,20 @@
   <div class="principal-container">
     <h2 class="principal-title">Principal Message</h2>
     <div class="principal-card">
-      <p>It is a privilege to welcome you to ISL PHARMACY COLLEGE.</p>
-      <p>The field of pharmacy has transformed from traditional dispensing to a high-tech, patient-centered clinical practice. Our mission is to produce <span class="principal-highlight">&lsquo;Seven-Star Pharmacists&rsquo;</span> who excel as caregivers, decision-makers, and leaders in the global healthcare landscape.</p>
-      <p><span class="principal-quote">&ldquo;Welcome to our vibrant academic community. At ISL PHARMACY COLLEGE, we believe that education extends beyond the classroom. Our focus is on the holistic development of our students—blending rigorous academic standards with personal integrity and social responsibility.
-      Our dedicated faculty members act as mentors, guiding you through the complexities of pharmaceutical sciences and preparing you for diverse career paths in clinical research, hospital pharmacy, and the pharmaceutical industry. We look forward to helping you realize your potential as a future healthcare professional.&rdquo;</span></p>
-      <p>Through our state-of-the-art laboratories and industry partnerships, we provide an environment where innovation thrives. We don&rsquo;t just teach the science of medicine; we instill the ethics of care. Whether you are a prospective student or a healthcare partner, I invite you to join us in shaping a healthier tomorrow.</p>
+      <div class="principal-media">
+        <img src="https://instasize.com/api/image/1edd890113764eea0c01aec7741551f32ba65ec2c95d9eb8156cb9d9444af44c.png" alt="Principal" class="principal-image" loading="lazy" decoding="async">
+      </div>
+      <div class="principal-text">
+        <p class="principal-lead">It is a privilege to welcome you to ISL PHARMACY COLLEGE.</p>
+        <p>The field of pharmacy has transformed from traditional dispensing to a high-tech, patient-centered clinical practice. Our mission is to produce <span class="principal-highlight">&lsquo;Seven-Star Pharmacists&rsquo;</span> who excel as caregivers, decision-makers, and leaders in the global healthcare landscape.</p>
+
+        <blockquote class="principal-quote">
+          <p>&ldquo;Welcome to our vibrant academic community. At ISL PHARMACY COLLEGE, we believe that education extends beyond the classroom. Our focus is on the holistic development of our students&mdash;blending rigorous academic standards with personal integrity and social responsibility.</p>
+          <p>Our dedicated faculty members act as mentors, guiding you through the complexities of pharmaceutical sciences and preparing you for diverse career paths in clinical research, hospital pharmacy, and the pharmaceutical industry. We look forward to helping you realize your potential as a future healthcare professional.&rdquo;</p>
+        </blockquote>
+
+        <p>Through our state-of-the-art laboratories and industry partnerships, we provide an environment where innovation thrives. We don&rsquo;t just teach the science of medicine; we instill the ethics of care. Whether you are a prospective student or a healthcare partner, I invite you to join us in shaping a healthier tomorrow.</p>
+      </div>
     </div>
   </div>
 </section>
