--- a/index.html
+++ b/index.html
@@ -143,6 +143,41 @@
   </div>
 </section>
 
+<!-- GALLERY -->
+<section class="gallery-section" id="gallery">
+  <div class="gallery-container">
+    <h2 class="gallery-title">DRIVE IN TO GALLARY OF EXPERIENCE</h2>
+    <p class="gallery-subtitle">A glimpse into our campus moments, labs, and celebrations.</p>
+
+    <div class="gallery-grid">
+      <a class="gallery-item" href="https://instasize.com/api/image/97da54a8dc1bdc624db34818060b987dbe3278b3b4ffa96b06f40fa24119bba5.png" target="_blank" rel="noopener">
+        <img src="https://instasize.com/api/image/97da54a8dc1bdc624db34818060b987dbe3278b3b4ffa96b06f40fa24119bba5.png" alt="Gallery image 1" loading="lazy" decoding="async">
+      </a>
+      <a class="gallery-item" href="https://instasize.com/api/image/14580d6c2181a242e5dabca67cc304262b7a1c31a3ad5ba3b1052236a1acdb72.png" target="_blank" rel="noopener">
+        <img src="https://instasize.com/api/image/14580d6c2181a242e5dabca67cc304262b7a1c31a3ad5ba3b1052236a1acdb72.png" alt="Gallery image 2" loading="lazy" decoding="async">
+      </a>
+      <a class="gallery-item" href="https://instasize.com/api/image/c8aa09a8b9f8f3414393733e3a2545be0a53be28b0529759fa287a39fa7f9755.png" target="_blank" rel="noopener">
+        <img src="https://instasize.com/api/image/c8aa09a8b9f8f3414393733e3a2545be0a53be28b0529759fa287a39fa7f9755.png" alt="Gallery image 3" loading="lazy" decoding="async">
+      </a>
+      <a class="gallery-item" href="https://instasize.com/api/image/adb7cf238554bd80548f0d34ae9c99dfe1df1d1ae56cb4f9468ce7fff8d8318b.png" target="_blank" rel="noopener">
+        <img src="https://instasize.com/api/image/adb7cf238554bd80548f0d34ae9c99dfe1df1d1ae56cb4f9468ce7fff8d8318b.png" alt="Gallery image 4" loading="lazy" decoding="async">
+      </a>
+      <a class="gallery-item" href="https://instasize.com/api/image/6e0338b986d279ad7e4a9718103b7b7b96034a15a2998c6d900620480ddc4a50.png" target="_blank" rel="noopener">
+        <img src="https://instasize.com/api/image/6e0338b986d279ad7e4a9718103b7b7b96034a15a2998c6d900620480ddc4a50.png" alt="Gallery image 5" loading="lazy" decoding="async">
+      </a>
+      <a class="gallery-item" href="https://instasize.com/api/image/e9744887bcc5a96c5602edf5805dfb28ffd0776ded4e0765d3930b5a351481d3.png" target="_blank" rel="noopener">
+        <img src="https://instasize.com/api/image/e9744887bcc5a96c5602edf5805dfb28ffd0776ded4e0765d3930b5a351481d3.png" alt="Gallery image 6" loading="lazy" decoding="async">
+      </a>
+      <a class="gallery-item" href="https://instasize.com/api/image/d19f23c6263225796ba1f0212c2f956a528d9daf60c6280186d76f667df7c1f2.png" target="_blank" rel="noopener">
+        <img src="https://instasize.com/api/image/d19f23c6263225796ba1f0212c2f956a528d9daf60c6280186d76f667df7c1f2.png" alt="Gallery image 7" loading="lazy" decoding="async">
+      </a>
+      <a class="gallery-item" href="https://instasize.com/api/image/8280183ea1457d124d8a46750c885e7241cbce9f60ab2e4089dd472c5987e5e4.png" target="_blank" rel="noopener">
+        <img src="https://instasize.com/api/image/8280183ea1457d124d8a46750c885e7241cbce9f60ab2e4089dd472c5987e5e4.png" alt="Gallery image 8" loading="lazy" decoding="async">
+      </a>
+    </div>
+  </div>
+</section>
+
 <!-- FOOTER -->
 <footer class="site-footer">
   <div class="footer-container">
