--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </button>
         <nav class="menu">
             <ul>
-            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="aboutus.html">FACULTY</a></li>
                 <li>ACADEMICS</li>
                 <li>FACILITIES</li>
                 <li>DEPARTMENTS</li>
