--- a/aboutus.html
+++ b/aboutus.html
@@ -108,7 +108,7 @@
     <a href="index.html">Online Grievance</a>
     <a href="index.html">R&amp;D</a>
     <a href="index.html">IQAC</a>
-    <a href="index.html"></a>
+    <a href="sif.html">SIF</a>
     <a href="index.html">NIRF</a>
     <a href="index.html">Blog</a>
     <a href="almanac.html">ALMANAC</a>
