--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="#">Online Grievance</a>
     <a href="#">R&amp;D</a>
     <a href="#">IQAC</a>
-    <a href="#"></a>
+    <a href="sif.html">SIF</a>
     <a href="#">NIRF</a>
     <a href="syllabus.html">Syllabus</a>
     <a href="almanac.html">ALMANAC</a>
