--- a/gender-equality.html
+++ b/gender-equality.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=1024">
-<title>SIF - ISL Pharmacy College</title>
+<title>Gender Equality - ISL Pharmacy College</title>
 <link rel="stylesheet" href="style.css">
 <style>
-  .sif-container {
+  .gender-container {
     max-width: 1200px;
     margin: 40px auto;
     padding: 20px;
   }
 
-  .sif-title {
+  .gender-title {
     text-align: center;
     color: #1e5631;
     font-size: 2.5em;
@@ -20,7 +20,7 @@
     font-weight: bold;
   }
 
-  .sif-subtitle {
+  .gender-subtitle {
     text-align: center;
     color: #444;
     font-size: 1.1em;
@@ -90,8 +90,7 @@
     .pdf-viewer {
       height: 520px;
     }
-
-    .sif-title {
+    .gender-title {
       font-size: 2em;
     }
   }
@@ -109,10 +108,11 @@
     <a href="index.html">Online Grievance</a>
     <a href="index.html">R&amp;D</a>
     <a href="index.html">IQAC</a>
-    <a href="sif.html" class="active">SIF</a>
+    <a href="sif.html">SIF</a>
     <a href="index.html">NIRF</a>
+    <a href="index.html">Blog</a>
     <a href="safety-campus.html">Safety Campus</a>
-    <a href="gender-equality.html">Gender Equality</a>
+    <a href="gender-equality.html" class="active">Gender Equality</a>
     <a href="student-list.html">Student List</a>
     <a href="almanac.html">ALMANAC</a>
     <a href="#contact">Contact Us</a>
@@ -146,7 +146,7 @@
                 <li><a href="index.html">DEPARTMENTS</a></li>
                 <li><a href="index.html">PLACEMENTS</a></li>
                 <li><a href="safety-campus.html">SAFETY CAMPUS</a></li>
-                <li><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li><a href="gender-equality.html" class="active">GENDER EQUALITY</a></li>
                 <li><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only"><a href="index.html">EXAMINATION</a></li>
                 <li class="mobile-only"><a href="index.html">STUDENT CORNER</a></li>
@@ -166,22 +166,23 @@
     </div>
 </header>
 
-<!-- SIF CONTENT -->
-<div class="sif-container">
-  <h1 class="sif-title">SIF</h1>
-  <p class="sif-subtitle">View and download the official SIF PDF.</p>
+<!-- GENDER EQUALITY CONTENT -->
+<div class="gender-container">
+  <h1 class="gender-title">Gender Equality</h1>
+  <p class="gender-subtitle">View and download the Gender Harassment PDF.</p>
 
   <!-- PDF Viewer -->
-  <iframe class="pdf-viewer" src="https://drive.google.com/file/d/1Zf-VBBc15FXutFp96dErPbWZxh3PFkFv/preview" type="application/pdf">
-    <p>Your browser does not support PDF preview. Please <a href="https://drive.google.com/file/d/1Zf-VBBc15FXutFp96dErPbWZxh3PFkFv/view?usp=drivesdk" target="_blank" rel="noopener">view the PDF</a> on Google Drive.</p>
+  <iframe class="pdf-viewer" src="GENDER%20HARASSMENT.pdf" type="application/pdf">
+    <p>Your browser does not support PDF preview. Please <a href="GENDER%20HARASSMENT.pdf" target="_blank" rel="noopener">open the PDF</a>.</p>
   </iframe>
 
   <!-- Download Box -->
   <div class="download-box">
-    <h2>SIF PDF</h2>
-    <p>Download for offline viewing.</p>
+    <h2>Gender Harassment PDF</h2>
+    <p>Open in browser or download for offline viewing.</p>
     <div class="download-actions">
-      <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1Zf-VBBc15FXutFp96dErPbWZxh3PFkFv" target="_blank" rel="noopener">⬇ Download</a>
+      <a class="download-btn" href="GENDER%20HARASSMENT.pdf" target="_blank" rel="noopener">👁 View</a>
+      <a class="download-btn" href="GENDER%20HARASSMENT.pdf" download>⬇ Download</a>
     </div>
   </div>
 </div>
