--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     <a href="#">IQAC</a>
     <a href="sif.html">SIF</a>
     <a href="#">NIRF</a>
-    <a href="syllabus.html">Syllabus</a>
+    <a href="safety-campus.html">Safety Campus</a>
+    <a href="gender-equality.html">Gender Equality</a>
+    <a href="student-list.html">Student List</a>
     <a href="almanac.html">ALMANAC</a>
-    <a href="#">Contact Us</a>
+    <a href="#contact">Contact Us</a>
   </nav>
 </div>
 
@@ -52,7 +54,9 @@
                 <li>FACILITIES</li>
                 <li>DEPARTMENTS</li>
                 <li>PLACEMENTS</li>
-            <li><a href="syllabus.html">SYLLABUS</a></li>
+                <li><a href="safety-campus.html">SAFETY CAMPUS</a></li>
+                <li><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only">EXAMINATION</li>
                 <li class="mobile-only">STUDENT CORNER</li>
                 <li class="mobile-only">ONLINE GRIEVANCE</li>
@@ -60,9 +64,11 @@
                 <li class="mobile-only">IQAC</li>
                 <li class="mobile-only"><a href="almanac.html">ALMANAC</a></li>
                 <li class="mobile-only">NIRF</li>
-                <li class="mobile-only"><a href="syllabus.html">SYLLABUS</a></li>
+                <li class="mobile-only"><a href="safety-campus.html">SAFETY CAMPUS</a></li>
+                <li class="mobile-only"><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li class="mobile-only"><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only">CAREERS</li>
-                <li class="mobile-only">CONTACT US</li>
+                <li class="mobile-only"><a href="#contact">CONTACT US</a></li>
             </ul>
         </nav>
     </div>
@@ -180,7 +186,7 @@
 </section>
 
 <!-- FOOTER -->
-<footer class="site-footer">
+<footer class="site-footer" id="contact">
   <div class="footer-container">
     <div class="footer-brand">ISL PHARMACY COLLEGE</div>
     <div class="footer-contact">
