--- a/syllabus.html
+++ b/syllabus.html
@@ -111,8 +111,11 @@
     <a href="sif.html">SIF</a>
     <a href="index.html">NIRF</a>
     <a href="index.html">Blog</a>
+    <a href="safety-campus.html">Safety Campus</a>
+    <a href="gender-equality.html">Gender Equality</a>
+    <a href="student-list.html">Student List</a>
     <a href="almanac.html">ALMANAC</a>
-    <a href="index.html">Contact Us</a>
+    <a href="#contact">Contact Us</a>
   </nav>
 </div>
 
@@ -142,7 +145,9 @@
                 <li><a href="index.html">FACILITIES</a></li>
                 <li><a href="index.html">DEPARTMENTS</a></li>
                 <li><a href="index.html">PLACEMENTS</a></li>
-                <li><a href="syllabus.html">SYLLABUS</a></li>
+                <li><a href="safety-campus.html">SAFETY CAMPUS</a></li>
+                <li><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only"><a href="index.html">EXAMINATION</a></li>
                 <li class="mobile-only"><a href="index.html">STUDENT CORNER</a></li>
                 <li class="mobile-only"><a href="index.html">ONLINE GRIEVANCE</a></li>
@@ -150,9 +155,11 @@
                 <li class="mobile-only"><a href="index.html">IQAC</a></li>
                 <li class="mobile-only"><a href="almanac.html">ALMANAC</a></li>
                 <li class="mobile-only"><a href="index.html">NIRF</a></li>
-                <li class="mobile-only"><a href="syllabus.html">SYLLABUS</a></li>
+                <li class="mobile-only"><a href="safety-campus.html">SAFETY CAMPUS</a></li>
+                <li class="mobile-only"><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li class="mobile-only"><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only"><a href="index.html">CAREERS</a></li>
-                <li class="mobile-only"><a href="index.html">CONTACT US</a></li>
+                <li class="mobile-only"><a href="#contact">CONTACT US</a></li>
             </ul>
         </nav>
     </div>
@@ -180,7 +187,7 @@
 </div>
 
 <!-- FOOTER -->
-<footer class="site-footer">
+<footer class="site-footer" id="contact">
   <div class="footer-container">
     <div class="footer-brand">ISL PHARMACY COLLEGE</div>
     <div class="footer-contact">
