--- a/gender-equality.html
+++ b/gender-equality.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=1024">
-<title>Gender Equality - ISL Pharmacy College</title>
+<title>GHC - ISL Pharmacy College</title>
 <link rel="stylesheet" href="style.css">
 <style>
   .gender-container {
@@ -111,8 +111,8 @@
     <a href="sif.html">SIF</a>
     <a href="index.html">NIRF</a>
     <a href="index.html">Blog</a>
-    <a href="safety-campus.html">Safety Campus</a>
-    <a href="gender-equality.html" class="active">Gender Equality</a>
+    <a href="safety-campus.html">ANTI RAGGING CELL</a>
+    <a href="gender-equality.html" class="active">GHC</a>
     <a href="student-list.html">Student List</a>
     <a href="almanac.html">ALMANAC</a>
     <a href="#contact">Contact Us</a>
@@ -145,8 +145,8 @@
                 <li><a href="index.html">FACILITIES</a></li>
                 <li><a href="index.html">DEPARTMENTS</a></li>
                 <li><a href="index.html">PLACEMENTS</a></li>
-                <li><a href="safety-campus.html">SAFETY CAMPUS</a></li>
-                <li><a href="gender-equality.html" class="active">GENDER EQUALITY</a></li>
+                <li><a href="safety-campus.html">ANTI RAGGING CELL</a></li>
+                <li><a href="gender-equality.html" class="active">GHC</a></li>
                 <li><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only"><a href="index.html">EXAMINATION</a></li>
                 <li class="mobile-only"><a href="index.html">STUDENT CORNER</a></li>
@@ -156,8 +156,8 @@
                 <li class="mobile-only"><a href="sif.html">SIF</a></li>
                 <li class="mobile-only"><a href="almanac.html">ALMANAC</a></li>
                 <li class="mobile-only"><a href="index.html">NIRF</a></li>
-                <li class="mobile-only"><a href="safety-campus.html">SAFETY CAMPUS</a></li>
-                <li class="mobile-only"><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li class="mobile-only"><a href="safety-campus.html">ANTI RAGGING CELL</a></li>
+                <li class="mobile-only"><a href="gender-equality.html">GHC</a></li>
                 <li class="mobile-only"><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only"><a href="index.html">CAREERS</a></li>
                 <li class="mobile-only"><a href="#contact">CONTACT US</a></li>
@@ -166,9 +166,9 @@
     </div>
 </header>
 
-<!-- GENDER EQUALITY CONTENT -->
+<!-- GHC CONTENT -->
 <div class="gender-container">
-  <h1 class="gender-title">Gender Equality</h1>
+  <h1 class="gender-title">GHC</h1>
   <p class="gender-subtitle">View and download the Gender Harassment PDF.</p>
 
   <!-- PDF Viewer -->
