--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <a href="#">IQAC</a>
     <a href="sif.html">SIF</a>
     <a href="#">NIRF</a>
-    <a href="safety-campus.html">Safety Campus</a>
-    <a href="gender-equality.html">Gender Equality</a>
+    <a href="safety-campus.html">ANTI RAGGING CELL</a>
+    <a href="gender-equality.html">GHC</a>
     <a href="student-list.html">Student List</a>
     <a href="almanac.html">ALMANAC</a>
     <a href="#contact">Contact Us</a>
@@ -54,8 +54,8 @@
                 <li>FACILITIES</li>
                 <li>DEPARTMENTS</li>
                 <li>PLACEMENTS</li>
-                <li><a href="safety-campus.html">SAFETY CAMPUS</a></li>
-                <li><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li><a href="safety-campus.html">ANTI RAGGING CELL</a></li>
+                <li><a href="gender-equality.html">GHC</a></li>
                 <li><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only">EXAMINATION</li>
                 <li class="mobile-only">STUDENT CORNER</li>
@@ -64,8 +64,8 @@
                 <li class="mobile-only">IQAC</li>
                 <li class="mobile-only"><a href="almanac.html">ALMANAC</a></li>
                 <li class="mobile-only">NIRF</li>
-                <li class="mobile-only"><a href="safety-campus.html">SAFETY CAMPUS</a></li>
-                <li class="mobile-only"><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li class="mobile-only"><a href="safety-campus.html">ANTI RAGGING CELL</a></li>
+                <li class="mobile-only"><a href="gender-equality.html">GHC</a></li>
                 <li class="mobile-only"><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only">CAREERS</li>
                 <li class="mobile-only"><a href="#contact">CONTACT US</a></li>
@@ -153,7 +153,7 @@
 <!-- GALLERY -->
 <section class="gallery-section" id="gallery">
   <div class="gallery-container">
-    <h2 class="gallery-title">DRIVE IN TO GALLARY OF EXPERIENCE</h2>
+    <h2 class="gallery-title">DRIVE IN TO GALLERY OF EXPERIENCE</h2>
     <p class="gallery-subtitle">A glimpse into our campus moments, labs, and celebrations.</p>
 
     <div class="gallery-grid">
