--- a/safety-campus.html
+++ b/safety-campus.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=1024">
-<title>Safety Campus - ISL Pharmacy College</title>
+<title>Anti Ragging Cell - ISL Pharmacy College</title>
 <link rel="stylesheet" href="style.css">
 <style>
   .safety-container {
@@ -111,8 +111,8 @@
     <a href="sif.html">SIF</a>
     <a href="index.html">NIRF</a>
     <a href="index.html">Blog</a>
-    <a href="safety-campus.html" class="active">Safety Campus</a>
-    <a href="gender-equality.html">Gender Equality</a>
+    <a href="safety-campus.html" class="active">ANTI RAGGING CELL</a>
+    <a href="gender-equality.html">GHC</a>
     <a href="student-list.html">Student List</a>
     <a href="almanac.html">ALMANAC</a>
     <a href="#contact">Contact Us</a>
@@ -145,8 +145,8 @@
                 <li><a href="index.html">FACILITIES</a></li>
                 <li><a href="index.html">DEPARTMENTS</a></li>
                 <li><a href="index.html">PLACEMENTS</a></li>
-                <li><a href="safety-campus.html" class="active">SAFETY CAMPUS</a></li>
-                <li><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li><a href="safety-campus.html" class="active">ANTI RAGGING CELL</a></li>
+                <li><a href="gender-equality.html">GHC</a></li>
                 <li><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only"><a href="index.html">EXAMINATION</a></li>
                 <li class="mobile-only"><a href="index.html">STUDENT CORNER</a></li>
@@ -156,8 +156,8 @@
                 <li class="mobile-only"><a href="sif.html">SIF</a></li>
                 <li class="mobile-only"><a href="almanac.html">ALMANAC</a></li>
                 <li class="mobile-only"><a href="index.html">NIRF</a></li>
-                <li class="mobile-only"><a href="safety-campus.html">SAFETY CAMPUS</a></li>
-                <li class="mobile-only"><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li class="mobile-only"><a href="safety-campus.html">ANTI RAGGING CELL</a></li>
+                <li class="mobile-only"><a href="gender-equality.html">GHC</a></li>
                 <li class="mobile-only"><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only"><a href="index.html">CAREERS</a></li>
                 <li class="mobile-only"><a href="#contact">CONTACT US</a></li>
@@ -166,9 +166,9 @@
     </div>
 </header>
 
-<!-- SAFETY CAMPUS CONTENT -->
+<!-- ANTI RAGGING CELL CONTENT -->
 <div class="safety-container">
-  <h1 class="safety-title">Safety Campus</h1>
+  <h1 class="safety-title">Anti Ragging Cell</h1>
   <p class="safety-subtitle">View and download the Anti Ragging PDF.</p>
 
   <!-- PDF Viewer -->
