--- a/menu-test.html
+++ b/menu-test.html
@@ -123,7 +123,7 @@ body {
         <li>FACILITIES</li>
         <li>DEPARTMENTS</li>
         <li>PLACEMENTS</li>
-      <li><a href="gender-equality.html">GENDER EQUALITY</a></li>
+      <li><a href="gender-equality.html">GHC</a></li>
         <li>EXAMINATION</li>
         <li>STUDENT CORNER</li>
         <li>CONTACT US</li>
