--- a/student-list.html
+++ b/student-list.html
@@ -111,8 +111,8 @@
     <a href="sif.html">SIF</a>
     <a href="index.html">NIRF</a>
     <a href="index.html">Blog</a>
-    <a href="safety-campus.html">Safety Campus</a>
-    <a href="gender-equality.html">Gender Equality</a>
+    <a href="safety-campus.html">ANTI RAGGING CELL</a>
+    <a href="gender-equality.html">GHC</a>
     <a href="student-list.html" class="active">Student List</a>
     <a href="almanac.html">ALMANAC</a>
     <a href="#contact">Contact Us</a>
@@ -145,8 +145,8 @@
                 <li><a href="index.html">FACILITIES</a></li>
                 <li><a href="index.html">DEPARTMENTS</a></li>
                 <li><a href="index.html">PLACEMENTS</a></li>
-                <li><a href="safety-campus.html">SAFETY CAMPUS</a></li>
-                <li><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li><a href="safety-campus.html">ANTI RAGGING CELL</a></li>
+                <li><a href="gender-equality.html">GHC</a></li>
                 <li><a href="student-list.html" class="active">STUDENT LIST</a></li>
                 <li class="mobile-only"><a href="index.html">EXAMINATION</a></li>
                 <li class="mobile-only"><a href="index.html">STUDENT CORNER</a></li>
@@ -156,8 +156,8 @@
                 <li class="mobile-only"><a href="sif.html">SIF</a></li>
                 <li class="mobile-only"><a href="almanac.html">ALMANAC</a></li>
                 <li class="mobile-only"><a href="index.html">NIRF</a></li>
-                <li class="mobile-only"><a href="safety-campus.html">SAFETY CAMPUS</a></li>
-                <li class="mobile-only"><a href="gender-equality.html">GENDER EQUALITY</a></li>
+                <li class="mobile-only"><a href="safety-campus.html">ANTI RAGGING CELL</a></li>
+                <li class="mobile-only"><a href="gender-equality.html">GHC</a></li>
                 <li class="mobile-only"><a href="student-list.html">STUDENT LIST</a></li>
                 <li class="mobile-only"><a href="index.html">CAREERS</a></li>
                 <li class="mobile-only"><a href="#contact">CONTACT US</a></li>
