--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="principal-card">
       <div class="principal-media">
         <img src="https://instasize.com/api/image/5a149848357378a7363cf6d1d15308f32e35eb2df243b7d97732262e4de3ecff.png" alt="Principal" class="principal-image" loading="lazy" decoding="async">
-        <h3 class="principal-name">DR MOHD MUDASSIR HSSAIN</h3>
+        <h3 class="principal-name">DR MOHD MUDASSIR HUSSAIN</h3>
       </div>
       <div class="principal-text">
         <p class="principal-lead">It is a privilege to welcome you to ISL PHARMACY COLLEGE.</p>
